FIxes loose parts icons alignment.

--- a/loose_parts.css
+++ b/loose_parts.css
@@ -1,6 +1,7 @@
 /* M10 nut design by James Tauber */
 #M10_nut_top_view {
     display: inline-block;
+    height: 65px;
 }
 #M10_nut_outer_ring {
     display: inline-block;
@@ -47,6 +48,7 @@
 
 #M10_nut_side_view {
     display: inline-block;
+    height: 65px;
 }
 #M10_nut_side_view_press_washer {
     position: relative;
@@ -75,25 +77,26 @@
     background-color: black;
     width: 30px;
     height: 18px;
-    margin-left: 3px;
+    margin-left: 8px;
     border-radius: 3px;
 }
 #M6x12_kombi_side_mid {
     background-color: black;
     width: 12px;
     height: 2px;
-    margin-left: 12px;
+    margin-left: 17px;
 }
 #M6x12_kombi_side_washer {
     background-color: black;
     width: 36px;
     height: 5px;
+    margin-left: 5px;
 }
 #M6x12_kombi_side_body {
     background-color: black;
     width: 12px;
     height: 20px;
-    margin-left: 12px;
+    margin-left: 17px;
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
 }
@@ -220,7 +223,8 @@
 }
 
 #M6_nut_side_view {
-    width: 15px;
+    display: inline-block;
+    width: 45px;
     height: 45px;
 }
 #M6_nut_side_view_press_washer {
@@ -228,6 +232,7 @@
     border-top: 22.5px solid transparent;
     border-left: 14px solid black;
     border-bottom: 22.5px solid transparent;
+    margin-left: 14px;
 }
 #M6_nut_side_view_head {
     position: absolute;
@@ -236,7 +241,7 @@
     height: 35px;
     top: 50%;
     left: 50%;
-    margin: -17.5px 0px 0px -10px;
+    margin: -17.5px 0px 0px -17.5px;
     border-radius: 3px;
 }
 
